# toggl-py

./: .env.sample  .gitignore  README.md  compose.yml
toggl_py/: .swagger-codegen-ignore  README.md  mkdocs.yml  pyproject.toml
toggl_py/docs/: AlertsApi.md  ApprovalsApi.md  AvatarsApi.md  BasePost.md  BillingFancyPlan.md  BillingportalPayload.md  CalculateCalculateRequest.md  CalendarApi.md  ClientsApi.md  ClientsDataTrendsGraph.md  ComparativeComparativePost.md  ComparativeGraphData.md  CountriesApi.md  CustomerCoupon.md  CustomerDiscountResponse.md  CustomerPaymentMethod.md  CustomerPaymentMethodUSBankAccount.md  DashboardAllActivities.md  DetailedSingleTimeEntry.md  DictionaryGeneralDictionary.md  DictionaryReportDict.md  DictionaryReportDictionaries.md  DictionaryReportDictionariesData.md  DictionaryReportUserDict.md  DictionaryTaskDictionary.md  DtoCreationRequest.md  DtoFilterRequest.md  DtoOrdinationRequest.md  DtoPeriodRequest.md  DtoProjectStatusParamsRequest.md  DtoProjectUserParamsRequest.md  DtoProjectUserResponse.md  DtoQueryRequest.md  DtoTransformationRequest.md  ExportsApi.md  FavoritesApi.md  FeedbackApi.md  GoalsApi.md  GoalsInsightResponse.md  GoalsParamsCreate.md  (+125 more)
toggl_py/docs/api/: AlertsApi.md  ApprovalsApi.md  AuthApi.md  AuthenticationApi.md  AvatarsApi.md  CalendarApi.md  ClientsApi.md  CountriesApi.md  DashboardApi.md  DefaultApi.md  DetailedReportsApi.md  ExportsApi.md  FavoritesApi.md  FeedbackApi.md  GoalsApi.md  (+40 more)
toggl_py/tests/: conftest.py  run.sh
toggl_py/toggl/: __init__.py  api_client.py  configuration.py  rest.py  version.py
(+1009 files in other folders)
