[project]
name = "toggl-py"
dynamic = ["version"]
description = "Public Toggl API. Note: We use BasicAuth in a specific way. By the standard you provide &#x60;Authentication&#x60; header with &#x60;base64(user_name:password)&#x60; as a &#x60;credential&#x60;. In our case it will be &#x60;base64(user_name:api_token)&#x60;."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3 :: Only"]
requires-python = ">=3.11"
dependencies = [
    "certifi>=2024.2.2",
    "python-dateutil>=2.9.0",
    "urllib3>=2.2.1"
]

[project.urls]
Code = "https://github.com/compilerla/toggl-py"
Issues = "https://github.com/compilerla/toggl-py/issues"

[build-system]
requires = ["setuptools>=65", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'

[tool.pyright]
include = ["toggl"]

[tool.setuptools]
packages = ["toggl"]

[tool.setuptools_scm]
root = ".."
